# papertrail

./: .env.example  .gitignore  019db0d4-3fc5-76b8-8d27-af9ccbaab47b.jsonl  README.md  alembic.ini  compose.yaml  pi-session-2026-04-21T16-16-33-221Z_019db0d4-3fc5-76b8-8d27-af9ccbaab47b.html  pi-session-2026-04-22T05-45-13-165Z_019db3b8-9acc-7731-9cba-72ef32d443a3.html  pyproject.toml
alembic/: env.py
alembic/versions/: f419b339e175_initial_schema.py
config/: catalog.json  engines.json  llm.json  system.json
config/prompts/: correct_hint.txt  extract_natural.txt  extract_schema.txt  suggest.txt  validate_soft_default.txt
docs/: CURRENT_DEVELOPMENT.md  DECISIONS_AND_TASKS.md  PAPERTRAIL_ARCHITECTURE_V2.md  PLAYBOOK_DESIGN.md  PaperTrail2Gaps.md  PaperTrail2GapsResponses.md  PaperTrail2_Final_Approach.md  PaperTrail_Locked_Architecture.md  PaperTrail_Technical_Documentation.md  Session_Log_2026-04-20.md
docs/23/: mythoughts.txt
papertrail/cli/: app.py  formatters.py
papertrail/config/: loader.py
papertrail/engines/: base.py  dispatcher.py
papertrail/execution/: __init__.py  catalog.py  compiler.py  plan.py
papertrail/llm/: client.py  fallback.py  prompts.py  router.py
papertrail/models/: decision.py  extraction.py  pipeline_state.py  validation.py
papertrail/observability/: langfuse_client.py  logging.py  tracing.py
papertrail/orchestration/: graph.py  nodes.py  routing.py  runner.py  state.py
papertrail/passes/: preupload.py
papertrail/playbooks/: loader.py  merger.py  models.py  repository.py  v2_loader.py  v2_models.py
papertrail/projects/: __init__.py  loader.py  models.py
papertrail/validation/: __init__.py  engine.py
playbooks/_base/: classify.json  meta.json  postprocess.json  rules.json  schema.json  validate.json
scripts/: generate_sample_inputs.py
tests/: conftest.py
(+62 files in other folders)
