[project]
name = "papertrail"
version = "1.0.0"
description = "Agentic document processing pipeline for Indian financial documents"
requires-python = ">=3.11,<3.13"
readme = "README.md"

dependencies = [
    # Web and API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "click>=8.1.7",
    "streamlit>=1.40.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.29.0",
    "alembic>=1.13.3",

    # Orchestration
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=1.0.0",

    # LLM
    "instructor>=1.6.0",
    "openai>=1.54.0",
    "tenacity>=9.0.0",

    # Document processing
    "docling>=2.7.0",
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.4",
    "paddleocr>=2.9.0",
    "pytesseract>=0.3.13",
    "opencv-python>=4.10.0",
    "pillow>=11.0.0",
    "pdf2image>=1.17.0",

    # Observability
    "langfuse>=2.54.0",
    "structlog>=24.4.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",

    # HTTP for tool calls
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-pyyaml>=6.0.0",
    "factory-boy>=3.3.0",
]

[project.scripts]
papertrail = "papertrail.cli.app:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
